--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,6 @@ spring:
     url: jdbc:mysql://localhost:3306/interview?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
     username: root   #dev环境
     password: 246810
-  mvc: #url访问图片路径为 /qrcode/****
-    static-path-pattern: /image/**
-  resource: 
-    static-locations: files:D://qrcode/
   jpa: 
     hibernate: 
       ddl-auto: update    #只能使用update!
@@ -20,7 +16,7 @@ spring:
       exclude: WEB/INF/**    #不重启的目录
       additional-paths: src/main/java  #重启的目录
 server:
-  port: 8098
+  port: 8098 #443 如果不用nginx则改为443
   #以下 ssl 认证通过nginx实现
   #port: 443
   #ssl: 
